--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "nodemailer": "^7.0.10",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-google-recaptcha-v3": "^1.11.0",
     "react-icons": "^5.5.0",
     "swiper": "^12.0.3"
   },
